[package]
name = "base-reth-metering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Transaction Metering RPC Support"

[lints]
workspace = true

[dependencies]
# base/tips
tips-core.workspace = true

# reth
reth.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-evm.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-optimism-cli.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

# op-alloy
op-alloy-consensus.workspace = true

# rpc
jsonrpsee.workspace = true

# misc
tracing.workspace = true
eyre.workspace = true

[dev-dependencies]
alloy-genesis.workspace = true
alloy-rpc-client.workspace = true
rand.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-db-common.workspace = true
reth-e2e-test-utils.workspace = true
reth-optimism-node.workspace = true
reth-testing-utils.workspace = true
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tokio.workspace = true
base-reth-test-utils.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["reth-optimism-cli"]