[package]
name = "base-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base Reth Binary"

[lints]
workspace = true

[dependencies]
# internal
base-reth-flashblocks-rpc.workspace = true
base-reth-metering.workspace = true
base-reth-transaction-tracing.workspace = true
base-reth-account-abstraction.workspace = true

# reth
reth.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-primitives.workspace = true
reth-rpc-eth-api.workspace = true
reth-optimism-primitives.workspace = true
reth-rpc-convert.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-cli-util.workspace = true

# revm
revm.workspace = true
revm-bytecode.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-trie.workspace = true
alloy-provider.workspace = true
alloy-hardforks.workspace = true

# op-alloy
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-rpc-jsonrpsee.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true

# rollup-boost
rollup-boost.workspace = true
rustls.workspace = true

# tokio
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true

# async
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true

# reth-exex
reth-exex.workspace = true

# rpc
jsonrpsee.workspace = true

# misc
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
itertools.workspace = true
eyre.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
once_cell.workspace = true

[features]
default = []
jemalloc = ["reth-cli-util/jemalloc", "reth-optimism-cli/jemalloc"]
