[package]
name = "base-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base Reth Binary"

[lints]
workspace = true

[dependencies]
# internal
base-reth-flashblocks-rpc.workspace = true
base-reth-metering.workspace = true
base-reth-transaction-tracing.workspace = true

# reth
reth.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-cli-util.workspace = true

# async
futures-util.workspace = true

# reth-exex
reth-exex.workspace = true

# misc
clap.workspace = true
tracing.workspace = true
url.workspace = true
once_cell.workspace = true

[features]
default = []
jemalloc = ["reth-cli-util/jemalloc", "reth-optimism-cli/jemalloc"]
