[workspace]
members = [
    "utils/client",
    "utils/host",
    "utils/build",
    "utils/celestia/client",
    "utils/celestia/host",
    "utils/proof",
    "utils/ethereum/client",
    "utils/ethereum/host",
    "programs/range/*",
    "programs/aggregation",
    "scripts/*",
    "validity",
    "fault-proof"
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["ratankaliani", "zachobront", "fakedev9999"]
homepage = "https://succinctlabs.github.io/op-succinct/"
repository = "https://github.com/succinctlabs/op-succinct"

[workspace.dependencies]
# general
anyhow = { version = "1.0.86", default-features = false }
thiserror = { version = "2.0.3" }
cfg-if = "1.0.0"
spin = { version = "0.10.0" }
lru = "0.12.3"
async-trait = "0.1.80"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
clap = "4.5.9"
cargo_metadata = "0.18.1"
dotenv = "0.15.0"
num-format = "0.4.4"
futures = "0.3.30"
serde_cbor = "0.11.2"
log = "0.4.22"
itertools = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
rkyv = { version = "0.8", features = ["hashbrown-0_15", "std"] }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.22.1"
tower-http = { version = "0.5.2", features = ["limit"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
metrics-process = "2.4.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.10.1"

# kona
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", features = [
    "rkyv",
    "serde",
] }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }

kona-client = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-rpc = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }

# hana
hana-blobstream = { git = "https://github.com/celestiaorg/hana", rev = "a6077b794d1c00fc2af129fb28cbb0151f8c81b9" }
hana-celestia = { git = "https://github.com/celestiaorg/hana", rev = "a6077b794d1c00fc2af129fb28cbb0151f8c81b9" }
hana-host = { git = "https://github.com/celestiaorg/hana", rev = "a6077b794d1c00fc2af129fb28cbb0151f8c81b9" }
hana-oracle = { git = "https://github.com/celestiaorg/hana", rev = "a6077b794d1c00fc2af129fb28cbb0151f8c81b9" }

# op-succinct
op-succinct-prove = { path = "scripts/prove" }
op-succinct-client-utils = { path = "utils/client" }
op-succinct-host-utils = { path = "utils/host" }
op-succinct-build-utils = { path = "utils/build" }
op-succinct-elfs = { path = "utils/elfs" }
op-succinct-validity = { path = "validity" }
op-succinct-fp = { path = "fault-proof" }
op-succinct-ethereum-client-utils = { path = "utils/ethereum/client" }
op-succinct-ethereum-host-utils = { path = "utils/ethereum/host" }
op-succinct-celestia-client-utils = { path = "utils/celestia/client" }
op-succinct-celestia-host-utils = { path = "utils/celestia/host" }
op-succinct-proof-utils = { path = "utils/proof" }
op-succinct-range-utils = { path = "programs/range/utils" }

# Alloy (Network)
alloy-signer-local = { version = "0.15.8" }
alloy-provider = { version = "0.15.8" }
alloy-transport = { version = "0.15.8" }
alloy-transport-http = { version = "0.15.8" }
alloy-contract = { version = "0.15.8" }
alloy-network = { version = "0.15.8" }

# Alloy
alloy-rlp = { version = "0.3.11", default-features = false }
alloy-trie = { version = "0.8.0", default-features = false }
alloy-eips = { version = "0.15.8", default-features = false }
alloy-serde = { version = "0.15.8", default-features = false }
alloy-consensus = { version = "0.15.8", default-features = false }
alloy-rpc-types = { version = "0.15.8", default-features = false }
alloy-rpc-client = { version = "0.15.8", default-features = false }
alloy-node-bindings = { version = "0.15.8", default-features = false }
alloy-rpc-types-engine = { version = "0.15.8", default-features = false }
alloy-rpc-types-beacon = { version = "0.15.8", default-features = false }
alloy-rpc-types-eth = { version = "0.15.8", default-features = false }
alloy-signer = { version = "0.15.8", default-features = false }

# Keccak with the SHA3 patch is more efficient than the default Keccak.
alloy-primitives = { version = "1.0.0", default-features = false, features = [
    "sha3-keccak",
] }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-sol-macro = { version = "1.0.0", default-features = false }

# OP Alloy
op-alloy-consensus = { version = "0.15.1", default-features = false }
op-alloy-rpc-types = { version = "0.15.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.15.1", default-features = false }
op-alloy-network = { version = "0.15.1", default-features = false }

# Execution
alloy-evm = { version = "0.6.0", default-features = false, features = ["op"] }
alloy-op-evm = { version = "0.6.0", default-features = false }
# Use kzg-rs and substrate-bn for the zkVM.
revm = { version = "22.0.0", default-features = false, features = ["kzg-rs", "bn"] }
op-revm = { version = "3.0.1", default-features = false }

# SP1
# TODO(fakedev9999): Temporary patch to fix get_proof_status. Bump to v4.2.1 when released.
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", rev = "d2798c9" }
sp1-lib = { version = "4.2.0", features = ["verify"] }
sp1-zkvm = { version = "4.2.0", features = ["verify"] }
sp1-build = { version = "4.2.0" }

# kzg
kzg-rs = { version = "0.2.6", features = ["rkyv", "serde"] }
c-kzg = { version = "2.0.0", default-features = false }

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-4.1.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-4.1.0" }
