[workspace]
members = [
    "utils/client",
    "utils/host",
    "utils/build",
    "utils/celestia/client",
    "utils/celestia/host",
    "utils/eigenda/client",
    "utils/eigenda/host",
    "utils/proof",
    "utils/signer",
    "utils/ethereum/client",
    "utils/ethereum/host",
    "programs/range/*",
    "programs/aggregation",
    "scripts/*",
    "validity",
    "fault-proof",
    "bindings",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["ratankaliani", "zachobront", "fakedev9999", "yuwen01"]
homepage = "https://succinctlabs.github.io/op-succinct/"
repository = "https://github.com/succinctlabs/op-succinct"
version = "4.0.2"

[workspace.dependencies]
# general
anyhow = { version = "1.0.86", default-features = false }
thiserror = { version = "2.0.3" }
cfg-if = "1.0.0"
spin = { version = "0.10.0" }
lru = "0.12.3"
async-trait = "0.1.80"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
clap = "4.5.9"
cargo_metadata = "0.18.1"
dotenv = "0.15.0"
num-format = "0.4.4"
futures = "0.3.30"
serde_cbor = "0.11.2"
log = "0.4.22"
itertools = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
rkyv = { version = "0.8", features = ["hashbrown-0_15", "std"] }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.22.1"
tower-http = { version = "0.5.2", features = ["limit"] }
lazy_static = "1.5.0"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-opentelemetry = "^0.24"
opentelemetry = { version = "^0.23.0", features = ["trace"] }
opentelemetry_sdk = { version = "^0.23.0", features = [
    "trace",
    "rt-tokio",
    "logs_level_enabled",
] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "^0.16.0", features = ["default", "logs"] }
opentelemetry-appender-tracing = "0.4.0"

metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
metrics-process = "2.4.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.10.1"

# vergen - pin to exact versions for rollup-boost compatibility
vergen = "=9.0.4"
vergen-git2 = "=1.0.5"

# kona
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", features = [
    "rkyv",
    "serde",
] }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }

kona-client = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
# Note: kona-rpc is NOT included to avoid rollup-boost -> reth-optimism-primitives dependency
# which causes alloy version conflicts with hokulea v1.1.4. RPC types are defined locally in
# utils/host/src/rpc_types.rs instead.
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }

# hana
hana-blobstream = { git = "https://github.com/celestiaorg/hana", tag = "1.5.0-mocha" }
hana-celestia = { git = "https://github.com/celestiaorg/hana", tag = "1.5.0-mocha" }
hana-host = { git = "https://github.com/celestiaorg/hana", tag = "1.5.0-mocha" }
hana-oracle = { git = "https://github.com/celestiaorg/hana", tag = "1.5.0-mocha" }

# hokulea
hokulea-compute-proof = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
hokulea-eigenda = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
hokulea-host-bin = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
hokulea-proof = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
hokulea-witgen = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
hokulea-zkvm-verification = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
canoe-sp1-cc-host = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
canoe-sp1-cc-verifier = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }
canoe-verifier-address-fetcher = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.6" }

# op-succinct
op-succinct-prove = { path = "scripts/prove" }
op-succinct-client-utils = { path = "utils/client" }
op-succinct-host-utils = { path = "utils/host" }
op-succinct-build-utils = { path = "utils/build" }
op-succinct-elfs = { path = "utils/elfs" }
op-succinct-validity = { path = "validity" }
op-succinct-fp = { path = "fault-proof" }
op-succinct-ethereum-client-utils = { path = "utils/ethereum/client" }
op-succinct-ethereum-host-utils = { path = "utils/ethereum/host" }
op-succinct-celestia-client-utils = { path = "utils/celestia/client" }
op-succinct-celestia-host-utils = { path = "utils/celestia/host" }
op-succinct-eigenda-client-utils = { path = "utils/eigenda/client" }
op-succinct-eigenda-host-utils = { path = "utils/eigenda/host" }
op-succinct-proof-utils = { path = "utils/proof" }
op-succinct-signer-utils = { path = "utils/signer" }
op-succinct-signer-gcp-utils = { path = "utils/signer-gcp" }
op-succinct-range-utils = { path = "programs/range/utils" }
op-succinct-bindings = { path = "bindings" }

# Alloy (Network) - versions allow semver compatible upgrades for hokulea v1.1.4 (requires 1.4.3)
alloy-signer-local = { version = "1.4" }
alloy-provider = { version = "1.4" }
alloy-transport = { version = "1.4" }
alloy-transport-http = { version = "1.4" }
alloy-contract = { version = "1.4" }
alloy-network = { version = "1.4" }

# Alloy - versions allow semver compatible upgrades for hokulea v1.1.4
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false, features = [
    "ethereum",
] }
alloy-eips = { version = "1.4", default-features = false }
alloy-serde = { version = "1.4", default-features = false }
alloy-consensus = { version = "1.4", default-features = false }
alloy-tx-macros = { version = "1.4", default-features = false }
alloy-rpc-types = { version = "1.4", default-features = false }
alloy-rpc-client = { version = "1.4", default-features = false }
alloy-node-bindings = { version = "1.4", default-features = false }
alloy-rpc-types-engine = { version = "1.4", default-features = false }
alloy-rpc-types-beacon = { version = "1.4", default-features = false }
alloy-rpc-types-eth = { version = "1.4", default-features = false }
alloy-rpc-types-trace = { version = "1.4", default-features = false }
alloy-signer = { version = "1.4", default-features = false }
alloy-signer-gcp = { version = "1.4", default-features = false }
alloy = { version = "1.4", features = [
    "reqwest",
    "network",
    "providers",
    "sol-types",
    "rpc-types",
] }

# Keccak with the SHA3 patch is more efficient than the default Keccak.
# Note: alloy-primitives/sol-types are at 1.4.x to match kona dependencies
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "sha3-keccak",
] }
alloy-sol-types = { version = "1.4.1", default-features = false }
alloy-sol-macro = { version = "1.4.1", default-features = false }
alloy-chains = { version = "0.2.22", default-features = false }

# OP Alloy
op-alloy-consensus = { version = "0.22.4", default-features = false }
op-alloy-rpc-types = { version = "0.22.4", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.4", default-features = false }
op-alloy-network = { version = "0.22.4", default-features = false }

# Execution
alloy-evm = { version = "0.24.2", default-features = false }
alloy-op-evm = { version = "0.24.2", default-features = false }
# Use kzg-rs and substrate-bn for the zkVM.
# Versions aligned with kona v1.2.7
revm = { version = "33.1.0", default-features = false, features = [
    "bn",
] }
revm-precompile = { version = "31.0.0", default-features = false }
op-revm = { version = "14.1.0", default-features = false }

# SP1 v6.0.1 (Hypercube)
sp1-sdk = { version = "=6.0.1", features = ["network", "blocking", "profiling"] }
sp1-lib = { version = "=6.0.1", features = ["verify"] }
sp1-zkvm = { version = "=6.0.1", features = ["verify"] }
sp1-build = "=6.0.1"
sp1-prover = "=6.0.1"
sp1-core-executor = "=6.0.1"
sp1-hypercube = "=6.0.1"
sp1-primitives = "=6.0.1"

# kzg
kzg-rs = { version = "0.2.8", features = ["rkyv", "serde"] }
c-kzg = { version = "2.0.0", default-features = false }

# Cloud dependencies
gcloud-sdk = "0.27"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-6.0.0-substrate-bn" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }

# Note: alloy-tx-macros crates.io version must match alloy-consensus version
# Both are now at 1.4.x for hokulea v1.1.4 compatibility


# Note: vergen-lib conflict fixed by pinning vergen=9.0.4, vergen-git2=1.0.5 in Cargo.lock

# Patch reth crates to fix PartialEq bug in reth-transaction-pool (PR #21336)
# Using succinctlabs fork to enable HTTPS patching in CI (Cargo requires different source URL)
# v1.9.3-kona branch contains the backported fix from paradigmxyz/reth
[patch."https://github.com/paradigmxyz/reth"]
reth-chainspec = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-consensus = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-errors = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-ethereum-forks = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-ethereum-primitives = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-execution-errors = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-execution-types = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-primitives = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-primitives-traits = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-storage-api = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-storage-errors = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-trie = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
reth-trie-common = { git = "https://github.com/succinctlabs/reth", branch = "v1.9.3-kona" }
