[package]
name = "base-reth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# base/tips
tips-core.workspace = true

# reth
reth.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-evm.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

# rpc
jsonrpsee.workspace = true

# misc
tracing.workspace = true
eyre.workspace = true
serde.workspace = true

[dev-dependencies]
reth-optimism-primitives.workspace = true
op-alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-rpc-client.workspace = true
rand.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-db-common.workspace = true
reth-e2e-test-utils.workspace = true
reth-optimism-node.workspace = true
reth-testing-utils.workspace = true
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tokio.workspace = true
base-reth-test-utils.workspace = true
httpmock.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["reth-optimism-cli"]