[package]
name = "base-reth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-reth-flashblocks.workspace = true

# base/tips
tips-core.workspace = true

# reth
reth.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-evm.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true

# op-alloy
op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true

# tokio
tokio.workspace = true
tokio-stream.workspace = true

# rpc
jsonrpsee.workspace = true
jsonrpsee-types.workspace = true

# misc
tracing.workspace = true
eyre.workspace = true
serde.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
parking_lot.workspace = true
indexmap.workspace = true

# priority fee estimation
reth-optimism-payload-builder.workspace = true

[dev-dependencies]
base-flashtypes.workspace = true
reth-optimism-primitives.workspace = true
op-alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-rpc-client.workspace = true
rand.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-db-common.workspace = true
reth-e2e-test-utils.workspace = true
reth-optimism-node.workspace = true
reth-testing-utils.workspace = true
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
base-reth-test-utils.workspace = true
httpmock.workspace = true
futures-util.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-provider.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-sol-types.workspace = true
alloy-contract.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["reth-optimism-cli"]
