[package]
name = "base-reth-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base-specific node launcher wiring"

[lints]
workspace = true

[dependencies]
# internal
base-reth-flashblocks.workspace = true
base-reth-relay = { workspace = true, features = ["p2p"] }
base-reth-rpc.workspace = true
base-tracex.workspace = true

# reth
reth.workspace = true
reth-db.workspace = true
reth-exex.workspace = true
reth-network.workspace = true
reth-optimism-node.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-transaction-pool.workspace = true

# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true

# async
tokio.workspace = true

# misc
eyre.workspace = true
futures-util.workspace = true
once_cell.workspace = true
parking_lot = "0.12"
tracing.workspace = true
url.workspace = true
derive_more = { workspace = true, features = ["debug"] }
