[package]
name = "base-tracex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-exex.workspace = true
reth-tracing.workspace = true

# alloy
alloy-primitives.workspace = true

# async
futures.workspace = true
tokio.workspace = true

# misc
derive_more = { workspace = true, features = ["display"] }
eyre.workspace = true
lru = "0.16.1"
metrics.workspace = true
chrono.workspace = true
